--- a/columbuslist/pubspec.yaml
+++ b/columbuslist/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.13.1
+  get_it:
 
 dev_dependencies:
   flutter_test:
