--- a/columbuslist/pubspec.yaml
+++ b/columbuslist/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it:
   firebase_auth: ^3.3.14
   getwidget: ^2.0.5
+  cloud_firestore: ^3.1.12
 
 dev_dependencies:
   flutter_test:
