--- a/columbuslist/pubspec.yaml
+++ b/columbuslist/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^3.3.14
   getwidget: ^2.0.5
   cloud_firestore: ^3.1.12
+  image_picker_web: ^2.1.1
+  textfield_tags: ^2.0.0
 
 dev_dependencies:
   flutter_test:
